--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,7 +3,7 @@ name: Deploy Valaxy Blog
 on:
   push:
     branches:
-      - main    # 如果你的默认分支是 master，请改成 master
+      - master    # 如果你的默认分支是 master，请改成 master
 
 jobs:
   build:
